Tratamento de erros adicionado, tratamento de retornos inválidos adicionado, contrato ativo ou inativo adicionado
